--- a/src/components/Blogs/Blog.css
+++ b/src/components/Blogs/Blog.css
@@ -204,3 +204,18 @@
     font-size: 8px;
   }
 }
+
+
+/* Button Css */
+button {
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+button:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  outline: 1px solid #ccc;
+}
