blog added again

--- a/src/components/Blogs/Blog.css
+++ b/src/components/Blogs/Blog.css
@@ -68,13 +68,13 @@
     background-color: #ffbb66;
   }
   50% {
-    background-color: #ff2233;
+    background-color: #e7f3b3;
   }
   75% {
-    background-color: #ff8866;
+    background-color: #96bdee;
   }
   100% {
-    background-color: #ffbb66;
+    background-color: #e5a0f1;
   }
 }
 
